@@ -119,6 +119,7 @@ choose_country(char const *country, int *atsc, int *dvb, uint16_t *scan_type, in
     case SE: //      SWEDEN
     case SK: //      SLOVAKIA
     case TW: //      TAIWAN, DVB-T w. ATSC freq list (thanks for freqlist to mkrufky)
+    case PA: //      PANAMA, same as Taiwan
     case AU: //      AUSTRALIA, DVB-T w. 7MHz step
         switch (*dvb) {
         case SCAN_CABLE:
@@ -254,6 +255,17 @@ choose_country(char const *country, int *atsc, int *dvb, uint16_t *scan_type, in
             info("QAM US/CA\n");
         }
         break;
+    case PA: //      PANAMA, similar to US but uses channels 38 to 51
+        switch (*dvb) {
+        case SCAN_CABLE:
+            info("DVB-C for Panama not supported.\n");
+            break;
+        default:
+            *channellist = DVBT_PA;
+            info("DVB-T PA\n");
+            break;
+        }
+        break;
     case CO: //      COLOMBIA, 6MHz offs 389MHz
         switch (*dvb) {
         case SCAN_CABLE:
@@ -336,6 +348,15 @@ base_offset(int channel, int channellist)
         default:
             return SKIP_CHANNEL;
         }
+    case DVBT_PA: // DVB-T Panama, 6 MHz step
+        switch (channel) {
+            // scan up to ch 60
+        case 26 ... 60:
+            return 389142857; // for accurate channel finding, this number needs to be exact according to ISDB-T center here:
+                              // https://en.wikipedia.org/wiki/Television_channel_frequencies#Americas_(most_countries),_South_Korea,_Taiwan,_Burma_(Myanmar)_and_the_Philippines
+        default:
+            return SKIP_CHANNEL;
+        }
     case ISDBT_6MHZ: // ISDB-T, 6 MHz central frequencies
         switch (channel) {
             // Channels 7-13 are reserved but aren't used yet
@@ -410,6 +431,7 @@ freq_step(int channel, int channellist)
     case ATSC_VSB:
     case DVBC_BR:
     case DVBT2_CO:
+    case DVBT_PA:
     case ISDBT_6MHZ:
         return 6000000; // atsc region, 6MHz step
     case DVBT_AU:
